css/style.css
body {
background-color: rgb(248, 241, 232);
font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
}

#app {
    color:rgb(0, 0, 40);
    width: 40%;
    margin-left: 30%;
    margin-top: 1%;
    text-align: center;
}

.col-4 {
    width: 20px;
    height: 20px;
    font-size: 130px;
    text-align: center;
    display: inline-block;
    vertical-align: middle;
    border: 3px solid rgb(0, 0, 50);
    cursor: pointer;
}


button{
    border-radius: 10%;
    height: 50px;
    color: rgb(248, 241, 232);
    background-color: rgb(0, 0, 40);
}

